feat: gnb and ue deploy
